force-app/main/default/objects/Shipment_Number__c/Shipment_Number__c.object-meta.xml
<CustomObject>
    <description>Tracks a shipment from origin to destination</description>
    <label>Shipment</label>
    <nameField>
        <label>Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>