force-app/main/default/objects/Shipment_Number__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>Validate &lt; ETA</description>
    <label>Departure Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>