force-app/main/default/objects/Shipment_Number__c/fields/Ship_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Ship_Capacity__c</fullName>
    <inlineHelpText>Weight limit</inlineHelpText>
    <label>Ship Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>