force-app/main/default/objects/Shipment_Number__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Interplanetary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>